# Banking_operations_widget

./: README.md  pyproject.toml  requirements.txt
data/: directory.txt  old_lessons.txt  operations.json  test_operations.json  transactions.txt
src/: decorators.py  directory.py  external_api.py  financial.py  generators.py  main.py  masks.py  processing.py  search_transaction.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_financial.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
